[gd_scene load_steps=13 format=3 uid="uid://cmdwxn0xs5e4u"]

[ext_resource type="Texture2D" uid="uid://456q7628s1ru" path="res://Items/Snow&dirt.png" id="1_4txg1"]
[ext_resource type="Script" path="res://Script/snow.gd" id="1_e1vo8"]
[ext_resource type="Texture2D" uid="uid://bjyfuatyeratb" path="res://Items/Snowbig&Snowflower.png" id="2_e3too"]
[ext_resource type="Texture2D" uid="uid://dr0ttckswcn25" path="res://Items/shop-snow.png" id="3_axx75"]
[ext_resource type="Texture2D" uid="uid://cidt0qvllkv8t" path="res://Shadows/shadow.png" id="4_5fjiq"]
[ext_resource type="PackedScene" uid="uid://exluca04i7q7" path="res://Scene/player.tscn" id="6_wonyw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k637n"]
texture = ExtResource("1_4txg1")
1:1/size_in_atlas = Vector2i(2, 2)
1:1/0 = 0
3:1/size_in_atlas = Vector2i(2, 2)
3:1/0 = 0
5:1/size_in_atlas = Vector2i(2, 2)
5:1/0 = 0
5:3/size_in_atlas = Vector2i(2, 2)
5:3/0 = 0
5:5/size_in_atlas = Vector2i(2, 2)
5:5/0 = 0
3:3/size_in_atlas = Vector2i(2, 2)
3:3/0 = 0
3:5/size_in_atlas = Vector2i(2, 2)
3:5/0 = 0
1:3/size_in_atlas = Vector2i(2, 2)
1:3/0 = 0
1:5/size_in_atlas = Vector2i(2, 2)
1:5/0 = 0
8:2/size_in_atlas = Vector2i(2, 2)
8:2/0 = 0
10:2/size_in_atlas = Vector2i(2, 2)
10:2/0 = 0
8:4/size_in_atlas = Vector2i(2, 2)
8:4/0 = 0
10:4/size_in_atlas = Vector2i(2, 2)
10:4/0 = 0
7:8/size_in_atlas = Vector2i(2, 2)
7:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vemiu"]
texture = ExtResource("2_e3too")
3:1/size_in_atlas = Vector2i(6, 6)
3:1/0 = 0
7:10/size_in_atlas = Vector2i(2, 2)
7:10/0 = 0
9:10/size_in_atlas = Vector2i(2, 2)
9:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k1tw0"]
texture = ExtResource("3_axx75")
0:2/size_in_atlas = Vector2i(12, 13)
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_karox"]
sources/3 = SubResource("TileSetAtlasSource_k637n")
sources/4 = SubResource("TileSetAtlasSource_vemiu")
sources/5 = SubResource("TileSetAtlasSource_k1tw0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88am8"]
size = Vector2(26, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4gyo"]
size = Vector2(22, 53)

[node name="SnowScene" type="Node2D"]
position = Vector2(-9, 7)
script = ExtResource("1_e1vo8")

[node name="TileMap(No Y-sort)" type="TileMap" parent="."]
tile_set = SubResource("TileSet_karox")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(1900545, 196611, 3, 1900547, 196611, 3, 1900549, 196611, 3, 1900551, 196611, 3, 1900553, 196611, 3, 1900555, 196611, 3, 1900557, 196611, 3, 1900559, 196611, 3, 1900561, 196611, 3, 1900563, 196611, 3, 1900565, 196611, 3, 1900567, 196611, 3, 2031617, 196611, 3, 2031619, 196611, 3, 2031621, 196611, 3, 2031623, 196611, 3, 2031625, 196611, 3, 2031627, 196611, 3, 2031629, 196611, 3, 2031631, 196611, 3, 2031633, 196611, 3, 2031634, 196611, 3, 2031636, 196611, 3, 2031638, 196611, 3, 2031639, 196611, 3, 2162711, 196611, 3, 2162712, 196611, 3, 2228248, 196611, 3, 2293783, 196611, 3, 2424855, 196611, 3, 2490391, 196611, 3, 2555927, 196611, 3, 2359320, 196611, 3, 2490392, 196611, 3, 2555928, 196611, 3, 1769485, 196611, 3, 1638413, 196611, 3, 1507341, 196611, 3, 1376269, 196611, 3, 1245197, 196611, 3, 1114125, 196611, 3, 1114126, 196611, 3, 1245198, 196611, 3, 1310734, 196611, 3, 1441806, 196611, 3, 1572878, 196611, 3, 1703950, 196611, 3, 1769486, 196611, 3, 1900568, 196611, 3, 1900569, 196611, 3, 2031641, 196611, 3, 2031642, 196611, 3, 2031643, 196611, 3, 2031644, 196611, 3, 2031645, 196611, 3, 2031646, 196611, 3, 2031647, 196611, 3, 1900571, 196611, 3, 1900572, 196611, 3, 1900573, 196611, 3, 1900574, 196611, 3, 1900575, 196611, 3, 1900576, 196611, 3, 1966114, 196611, 3, 1900578, 196611, 3, 1966113, 196611, 3, 2031649, 196611, 3, 2031651, 196611, 3, 2031652, 196611, 3, 2031653, 196611, 3, 2031654, 196611, 3, 1900580, 196611, 3, 1900581, 196611, 3, 1900582, 196611, 3, 1900583, 196611, 3, 458794, 196611, 3, 458795, 196611, 3, 458796, 196611, 3, 458797, 196611, 3, 458798, 196611, 3, 458799, 196611, 3, 458800, 196611, 3, 458801, 196611, 3, 458802, 196611, 3, 458803, 196611, 3, 458804, 196611, 3, 458805, 196611, 3, 458806, 196611, 3, 458807, 196611, 3, 458808, 196611, 3, 458809, 196611, 3, 458810, 196611, 3, 458811, 196611, 3, 458812, 196611, 3, 458813, 196611, 3, 458814, 196611, 3, 458815, 196611, 3, 458816, 196611, 3, 458817, 196611, 3, 458818, 196611, 3, 458819, 196611, 3, 458820, 196611, 3, 458821, 196611, 3, 458822, 196611, 3, 458823, 196611, 3, 458824, 196611, 3, 524330, 196611, 3, 524331, 196611, 3, 524332, 196611, 3, 524333, 196611, 3, 524334, 196611, 3, 524335, 196611, 3, 524336, 196611, 3, 524337, 196611, 3, 524338, 196611, 3, 524339, 196611, 3, 524340, 196611, 3, 524341, 196611, 3, 524342, 196611, 3, 524343, 196611, 3, 524344, 196611, 3, 524345, 196611, 3, 524346, 196611, 3, 524347, 196611, 3, 524348, 196611, 3, 524349, 196611, 3, 524350, 196611, 3, 524351, 196611, 3, 524352, 196611, 3, 524353, 196611, 3, 524354, 196611, 3, 524355, 196611, 3, 524356, 196611, 3, 524357, 196611, 3, 524358, 196611, 3, 524359, 196611, 3, 524360, 196611, 3, 458792, 196611, 3, 458790, 196611, 3, 458788, 196611, 3, 589860, 196611, 3, 720932, 196611, 3, 852004, 196611, 3, 983076, 196611, 3, 1048612, 196611, 3, 1179684, 196611, 3, 1310756, 196611, 3, 1441828, 196611, 3, 1507364, 196611, 3, 1638436, 196611, 3, 1769508, 196611, 3, 589861, 196611, 3, 720933, 196611, 3, 852005, 196611, 3, 1048613, 196611, 3, 1179685, 196611, 3, 1310757, 196611, 3, 1441829, 196611, 3, 1507365, 196611, 3, 1638437, 196611, 3, 1703973, 196611, 3, 1835045, 196611, 3, 983077, 196611, 3, 524326, 196611, 3, 524328, 196611, 3, 2031655, 196611, 3, 2031656, 196611, 3, 1900585, 196611, 3, 48, 196611, 3, 131120, 196611, 3, 262192, 196611, 3, 327728, 196611, 3, 49, 196611, 3, 131121, 196611, 3, 262193, 196611, 3, 393265, 196611, 3, 1900587, 196611, 3, 1900589, 196611, 3, 1900590, 196611, 3, 1900592, 196611, 3, 1900593, 196611, 3, 1900595, 196611, 3, 1900596, 196611, 3, 1900598, 196611, 3, 1900599, 196611, 3, 1900601, 196611, 3, 1900603, 196611, 3, 1769531, 196611, 3, 1638459, 196611, 3, 1507387, 196611, 3, 1376315, 196611, 3, 1376317, 196611, 3, 1376319, 196611, 3, 1376322, 196611, 3, 1376321, 196611, 3, 1376323, 196611, 3, 1376326, 196611, 3, 1376325, 196611, 3, 1376327, 196611, 3, 1507399, 196611, 3, 1507397, 196611, 3, 1507396, 196611, 3, 1507394, 196611, 3, 1507392, 196611, 3, 1507390, 196611, 3, 1507388, 196611, 3, 1638460, 196611, 3, 1769532, 196611, 3, 1900604, 196611, 3, 2031658, 196611, 3, 2031660, 196611, 3, 2031662, 196611, 3, 2031664, 196611, 3, 2031666, 196611, 3, 2031668, 196611, 3, 2031670, 196611, 3, 2031672, 196611, 3, 2031674, 196611, 3, 2031676, 196611, 3, 720930, 196611, 3, 720928, 196611, 3, 720926, 196611, 3, 786462, 196611, 3, 786463, 196611, 3, 786466, 196611, 3, 786464, 196611, 3, 2097211, 196611, 3, 2162748, 196611, 3, 2228284, 196611, 3, 2293820, 196611, 3, 2228283, 196611, 3, 2293819, 196611, 3, 2359357, 196611, 3, 2359359, 196611, 3, 2359360, 196611, 3, 2359361, 196611, 3, 2359362, 196611, 3, 2359363, 196611, 3, 2359364, 196611, 3, 2359366, 196611, 3, 2359367, 196611, 3, 2424891, 196611, 3, 2424892, 196611, 3, 2424893, 196611, 3, 2424895, 196611, 3, 2424896, 196611, 3, 2424897, 196611, 3, 2424899, 196611, 3, 2424900, 196611, 3, 2424902, 196611, 3, 2424903, 196611, 3, 1769473, 196611, 1, 1769475, 196611, 1, 1769477, 196611, 1, 1769479, 196611, 1, 1769481, 196611, 1, 1769490, 196611, 1, 1769491, 196611, 1, 1769492, 196611, 1, 1769494, 196611, 1, 1769496, 196611, 1, 1769497, 196611, 1, 1769499, 196611, 1, 1769500, 196611, 1, 1769501, 196611, 1, 1769503, 196611, 1, 1769504, 196611, 1, 1769513, 196611, 1, 1769514, 196611, 1, 1769515, 196611, 1, 1769516, 196611, 1, 1769517, 196611, 1, 1769518, 196611, 1, 1769519, 196611, 1, 1769520, 196611, 1, 1769522, 196611, 1, 1769524, 196611, 1, 1769525, 196611, 1, 1769526, 196611, 1, 1769527, 196611, 1, 1245243, 196611, 1, 1245245, 196611, 1, 1245247, 196611, 1, 1245249, 196611, 1, 1245251, 196611, 1, 1245252, 196611, 1, 1245253, 196611, 1, 1245254, 196611, 1, 1245255, 196611, 1, 2228288, 196611, 1, 2228290, 196611, 1, 2228292, 196611, 1, 2228294, 196611, 1, 2228295, 196611, 1, 589854, 196611, 1, 589856, 196611, 1, 327716, 196611, 1, 327718, 196611, 1, 327720, 196611, 1, 327722, 196611, 1, 327724, 196611, 1, 327733, 196611, 1, 327735, 196611, 1, 327737, 196611, 1, 327739, 196611, 1, 327741, 196611, 1, 327743, 196611, 1, 327745, 196611, 1, 327747, 196611, 1, 327749, 196611, 1, 327751, 196611, 1, 327752, 196611, 1, 1769488, 524291, 4, 1769511, 524291, 4, 327731, 524291, 4, 2228286, 524291, 4, 1769483, 655363, 4, 1769506, 655363, 4, 327726, 655363, 4, 589858, 655363, 4, 2555963, 196611, 5, 2555965, 196611, 5, 2555966, 196611, 5, 2555968, 196611, 5, 2555970, 196611, 5, 2555971, 196611, 5, 2555972, 196611, 5, 2555973, 196611, 5, 2555975, 196611, 5, 1638464, 196611, 5, 1638466, 196611, 5, 1638468, 196611, 5, 1638470, 196611, 5, 1638471, 196611, 5, 1638462, 524291, 2, 1769534, 327683, 3, 1835070, 327683, 3, 1966142, 327683, 3, 2031678, 327683, 3, 2097214, 327683, 3, 1769529, 655363, 4, 1376313, 65539, 3, 1507385, 65539, 3, 1638457, 65539, 3, 1245241, 65539, 1, 2555961, 65539, 5, 2293817, 65539, 3, 2424889, 65539, 3, 2162745, 655363, 2, 2162714, 524291, 2, 2162709, 655363, 2, 2162707, 196611, 5, 2162705, 196611, 5, 2162703, 196611, 5, 2162701, 196611, 5, 2162699, 196611, 5, 2162697, 196611, 5, 2162695, 196611, 5, 2162693, 196611, 5, 2162691, 196611, 5, 2162689, 196611, 5, 2162716, 196611, 5, 2162718, 196611, 5, 2162720, 196611, 5, 2162722, 196611, 5, 2162724, 196611, 5, 2162726, 196611, 5, 2162728, 196611, 5, 2162730, 196611, 5, 2162732, 196611, 5, 2162734, 196611, 5, 2162736, 196611, 5, 2162738, 196611, 5, 2162740, 196611, 5, 2162742, 196611, 5, 2162744, 196611, 5, 2293786, 327683, 3, 2359322, 327683, 3, 2490394, 327683, 3, 2555930, 327683, 3, 2293781, 65539, 3, 2424853, 65539, 3, 2555925, 65539, 3, 1114123, 65539, 3, 1245195, 65539, 3, 1376267, 65539, 3, 1507339, 65539, 3, 1638411, 65539, 3, 1114128, 327683, 3, 1245200, 327683, 3, 1376272, 327683, 3, 1507344, 327683, 3, 1638416, 327683, 3, 786471, 327683, 3, 917543, 327683, 3, 1048615, 327683, 3, 1179687, 327683, 3, 1310759, 327683, 3, 1441831, 327683, 3, 1572903, 327683, 3, 1638439, 327683, 3, 1048610, 65539, 3, 1179682, 65539, 3, 1245218, 65539, 3, 1376290, 65539, 3, 1507362, 65539, 3, 1638434, 65539, 3, 917538, 655363, 2, 917536, 196611, 5, 917534, 196611, 5, 655399, 524291, 2, 327714, 65539, 1, 458786, 65539, 3, 46, 65539, 3, 131118, 65539, 3, 262190, 65539, 3, 51, 327683, 3, 131123, 327683, 3, 262195, 327683, 3, 655401, 196611, 5, 655403, 196611, 5, 655405, 196611, 5, 655407, 196611, 5, 655409, 196611, 5, 655411, 196611, 5, 655413, 196611, 5, 655415, 196611, 5, 655416, 196611, 5, 655419, 196611, 5, 655418, 196611, 5, 655422, 196611, 5, 655421, 196611, 5, 655424, 196611, 5, 655426, 196611, 5, 655427, 196611, 5, 655428, 196611, 5, 655429, 196611, 5, 655430, 196611, 5, 655431, 196611, 5, 655432, 196611, 5, 2424835, 196612, 1, 2424841, 196612, 1, 2424847, 196612, 1, 2424862, 196612, 1, 2424868, 196612, 1, 2424874, 196612, 1, 2424880, 196612, 1, 1900610, 196612, 1, 1900613, 196612, 1, 1507348, 196612, 1, 1507354, 196612, 1, 1114138, 196612, 1, 1114132, 196612, 1, 720922, 196612, 1, 720916, 196612, 1, 1507331, 196612, 1, 1114115, 196612, 1, 720899, 196612, 1, 655363, 196612, 1, 1638407, 458755, 8, 1638409, 458755, 8, 1507337, 458755, 8, 1376265, 458755, 8, 1245193, 458755, 8, 1114121, 458755, 8, 1114119, 458755, 8, 1245191, 458755, 8, 1376263, 458755, 8, 1507335, 458755, 8, 983047, 458755, 8, 983049, 458755, 8, 983051, 458755, 8, 983053, 458755, 8, 983055, 458755, 8, 983056, 458755, 8, 720905, 196612, 1, 524295, 458755, 8, 524297, 458755, 8, 524299, 458755, 8, 262147, 196612, 1, 262153, 196612, 1, 720910, 196612, 1, 327695, 196612, 1, 327701, 196612, 1, 327707, 196612, 1, 131114, 196612, 1, 131108, 196612, 1, 131075, 196612, 1, 131081, 196612, 1, 131082, 196612, 1, 131088, 196612, 1, 131094, 196612, 1, 131099, 196612, 1, 131104, 196612, 1, 393247, 458755, 8, 458783, 458755, 8, 458784, 458755, 8, 393249, 458755, 8, 131127, 196612, 1, 131133, 196612, 1, 131139, 196612, 1, 131142, 196612, 1, 917547, 196612, 1, 917553, 196612, 1, 917559, 196612, 1, 917565, 196612, 1, 917570, 196612, 1, 917574, 196612, 1, 1310763, 196612, 1, 1310769, 196612, 1, 1310773, 196612, 1, 1114169, 458755, 8, 1114171, 458755, 8, 1114173, 458755, 8, 1114175, 458755, 8, 1114177, 458755, 8, 1114179, 458755, 8, 1179717, 458755, 8, 1179719, 458755, 8, 1179720, 458755, 8, 1704008, 458755, 8, 1835080, 458755, 8, 1900616, 458755, 8, 2031688, 458755, 8, 2097224, 458755, 8, 2097222, 458755, 8, 2097220, 458755, 8, 2097218, 458755, 8, 2097216, 458755, 8, 2162760, 458755, 8, 2555976, 196611, 5, 2228296, 196611, 1, 2359368, 196611, 3, 2424904, 196611, 3, 1376328, 196611, 3, 1507400, 196611, 3, 1245256, 196611, 1, 1638472, 196611, 5, 2293779, 458755, 8, 2424851, 458755, 8, 2555923, 458755, 8, 2293812, 458755, 8, 2293814, 458755, 8, 2293816, 458755, 8, 2424888, 458755, 8, 2555960, 458755, 8, 2555958, 458755, 8, 2424886, 458755, 8, 2424884, 458755, 8, 2555956, 458755, 8, 1048606, 458755, 8, 1048608, 458755, 8, 1179678, 458755, 8, 1179680, 458755, 8, 1310750, 458755, 8, 1310752, 458755, 8, 1441822, 458755, 8, 1441824, 458755, 8, 1572894, 458755, 8, 1572896, 458755, 8, 1638432, 458755, 8, 1638430, 458755, 8, 1572905, 458755, 8, 1572907, 458755, 8, 1572909, 458755, 8, 1572911, 458755, 8, 1572913, 458755, 8, 1572915, 458755, 8, 1572917, 458755, 8, 1572919, 458755, 8, 1638455, 458755, 8, 1638454, 458755, 8, 1638451, 458755, 8, 1703988, 458755, 8, 1638449, 458755, 8, 1703983, 458755, 8, 1638441, 458755, 8, 1638443, 458755, 8, 1638445, 458755, 8)
layer_1/name = "house"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(1703946, 458756, 10, 983073, 458756, 10, 720937, 458756, 10, 1179709, 458756, 10, 262213, 458756, 10, 2228280, 458756, 10, 1703976, 589828, 10, 1703967, 589828, 10, 524291, 589828, 10, 1703992, 589828, 10, 2555975, 589828, 10, 2424852, 589828, 10, 720910, 5, 2)

[node name="Shadow2" type="Sprite2D" parent="."]
position = Vector2(236, 256.5)
scale = Vector2(0.883333, 1.5875)
texture = ExtResource("4_5fjiq")

[node name="player" parent="." instance=ExtResource("6_wonyw")]
position = Vector2(215, 245)
scale = Vector2(0.5, 0.5)

[node name="GoIntoShop" type="Area2D" parent="."]
position = Vector2(212, 231)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoIntoShop"]
position = Vector2(2, -5)
shape = SubResource("RectangleShape2D_88am8")

[node name="GoBackToGrass" type="Area2D" parent="."]
position = Vector2(9, 487)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoBackToGrass"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_n4gyo")

[connection signal="body_entered" from="GoIntoShop" to="." method="_on_go_into_shop_body_entered"]
[connection signal="body_exited" from="GoIntoShop" to="." method="_on_go_into_shop_body_exited"]
[connection signal="body_entered" from="GoBackToGrass" to="." method="_on_go_back_to_grass_body_entered"]
[connection signal="body_exited" from="GoBackToGrass" to="." method="_on_go_back_to_grass_body_exited"]
